tests/missing_right_arrow/expected_err.txt
grammar.peg:1:1: error: Expected a '<-' after this.
 1 | FirstRule
   | ~~~~~~~~~
